fixed spacing issues on wrapper

--- a/src/components/FormElements/Button.module.scss
+++ b/src/components/FormElements/Button.module.scss
@@ -50,7 +50,7 @@
 }
 
 .large {
-  margin: 6rem auto;
+  margin: 3rem auto;
   padding: 1.5rem 3rem;
   font-size: 1.2rem;
   box-shadow: -8px 8px 0px -2px rgba(0, 0, 0, 0.7);
