--- a/src/components/UI/Wrapper.module.scss
+++ b/src/components/UI/Wrapper.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   border-radius: 6px;
   padding: 2rem;
-  margin: 3rem 0 0;
+  margin: 0;
   text-align: center;
   background: $white;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
